# src/routes/users.ts
@@ -4,8 +4,47 @@ import { kv } from "../config/kv.ts";
 import { User } from "../types.ts";
 import { getUserByPhone } from "../utils/user.ts";
 import { Request, Response } from 'npm:@types/express@4.17.15';
+import { upsertContact } from "../utils/contact.ts";
 
 const router = express.Router();
+
+/**
+ * @route GET /users/identity
+ * @description Verifies if the x-channel number matches any registered user in the database.
+ * @param {Request} req - The request object from Express.
+ * @param {Response} res - The response object from Express.
+ * @returns {Promise<void>} - A promise that resolves to void.
+ */
+router.get('/users/identity', async (req: Request, res: Response) => {
+  const channelId = req.headers['x-channel'] as string;
+  const userId = req.headers['x-user-id'] as string;
+  const senderName = req.headers['x-sender-name'] as string;
+  const senderChannel = req.headers['x-sender-channel'] as string;
+
+  if (!channelId) {
+    return res.status(400).json({ error: 'Channel ID is required' });
+  }
+
+  const userByChannel = await getUserByPhone(channelId);
+
+  if (!userByChannel) {
+    const contact = await upsertContact(userId, {
+      name: senderName,
+      phone: senderChannel,
+    });
+
+    return {
+      message: 'Is not a admin, its a customer of user.',
+      contact: contact,
+    }
+  }
+
+  res.json({ 
+    message: 'User found, its a admin', 
+    user: userByChannel 
+  });
+});
+
 
 /**
  * @route PUT /users/available-hours
